<resources>
    <string name="app_name">Clash Royale </string>
    <string name="textView5">Загрузка...</string>
    <string name="button4">стандартные </string>
    <string name="button9">заклинания</string>
    <string name="button10">здания</string>
    <string name="textView4">Clash Royale Guide - это подробный справочник по игре Clash Royale который представляет собой описание карт и принцип их действия из игры  </string>
    <string name="textView6">Разработчик приложения: Морозов Илья</string>
    <string name="textView">"Clash Royale" - это стратегическая мобильная игра, разработанная и выпущенная компанией Supercell. В игре игроки собирают колоду из различных персонажей средневекового фэнтезийного мира и сражаются против других игроков в режиме реального времени.
</string>
    <string name="textView7">Суть игры заключается в том, чтобы размещать своих персонажей на арене и защищать свою башню, а также атаковать и уничтожать башни противника. Персонажи имеют различные способности, тактические возможности и характеристики, и игроки должны использовать их умело, чтобы выигрывать матчи.</string>
    <string name="textView11">Мини-П.Е.К.К.А</string>
    <string name="textView12"> Пламенный дракон</string>
    <string name="textView13">Рыцарь</string>
    <string name="textView18">Всадник на кабане</string>
    <string name="textView17"> Магический лучник</string>
    <string name="textView16"> Воздушный шар</string>
    <string name="textView3">Мегарыцарь</string>
    <string name="textView22"> Данная карта станет доступна с Тренировочной арены. Рыцарь прекрасно сражается в рукопашном бою, его оружие острый меч, а отличительной чертой его внешности являются роскошные усы....</string>
    <string name="textView2">Ярость</string>
    <string name="textView14">Бревно</string>
    <string name="textView15">Огненный шар</string>
    <string name="textView24"> Данная карта откроется начиная с четвертой арены. Это могущественной юнит, его цель строения, ещё он обладает способностью прыгать через реку....</string>
    <string name="textView26">Обладая силой тысячи усов, он с легкостью расправляется с врагами, нанося огромный урон по области. Посторонись!</string>
    <string name="textView28">Стреляет концентрированным огненным лучом. Урон со временем повышается. Носит шлем техника безопасности важнее всего.</string>
    <string name="textView30">Данная карта станет доступна со второй арены. Могущественный юнит, целью которого являются различные строения, в том числе и башни. Способен нанести значительный урон время высадки своей бомбы.</string>
    <string name="textView32">Вроде и не колдун, но и не лучник. Стреляет магической стрелой, пронзающей и наносящей урон всем врагам на своем пути. Никакого мошенничества, а сплошное волшебство!...</string>
    <string name="textView35">Данная карта доступна с 3 арены. Данное заклятие увеличивает наносимые врагу повреждений и скорость передвижения войск. Заклятие ярости эффективнее всего использовать для того чтобы увеличить..</string>
    <string name="textView36">Случайно разлитая бутылочка Ярости превратила обычное поваленное дерево в «Бревно». Оно жаждет мести, круша всё на своём пути!»..</string>
    <string name="textView38">Данная карта станет доступна с самого начала обучения в тренировочном лагере. Это заклинание можно бросить в любое место на карте. Огненным шаром можно добить башни, обладающие...</string>
    <string name="textView40">Миленькая у тебя башенка! Будет обидно, если арбалет разнесет ее с этой стороны арены...</string>
    <string name="textView42">Защитное сооружение, в котором живет подрывник. Наносит урон всем, кто достаточно глуп, чтобы подойти близко.</string>
    <string name="textView44">Здание, из которого периодически выходят на бой с врагом варвары. Пора устроить хаос!</string>

    <string name="textView8">"Clash Royale" сочетает в себе элементы стратегии, коллекционирования и командной игры, что делает ее увлекательной и захватывающей для широкой аудитории игроков.</string>
</resources>